nicolium: fix wrapping text in post titles

--- a/packages/nicolium/src/styles/new/statuses.scss
+++ b/packages/nicolium/src/styles/new/statuses.scss
@@ -746,6 +746,10 @@
     -webkit-line-clamp: 3;
   }
 
+  span:first-child {
+    overflow-wrap: anywhere
+  }
+
   button {
     @include mixins.button($theme: muted, $size: xs);
 
